fixed problem with overlap entries

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -19,6 +19,10 @@
     .container {
         position: relative;
 
+        @media (min-width: 992px) {
+            width: 90%;
+        }
+
         .nav__bg-wrapper {
             -webkit-transition: 0.3s;
             transition: 0.3s;
@@ -134,6 +138,10 @@
     	    z-index: -1;	    
     	    left: 20%;	    
     	    top: 0%;
+
+            @media (max-width: 1200px) {
+                left: 10%;
+             }
         
             .nav__section {
                 padding: 15px 0 15px 0;
